--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,7 @@ body {
   color: #fff;
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
 }
+
+.box-shadow {
+  box-shadow: 0px 5px 5px rgba(0,0,0,.2);
+}
